# aidi-desktop-tauri

./: .env  .env.development  .env.production  .env.test  .gitignore  AGENTS.md  CLAUDE.md  build.js  debug.sh  index.html  login.html  menu.html  optimizer.html  package-lock.json  package.json  panel.html  pre-dev.js  submenu.html  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
docs/: floating-ball-design-spec.md
pkg-scripts/: postinstall
src/: App.vue  login.ts  menu.ts  optimizer.ts  panel.ts  style.css  submenu.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  menu-remote.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: disk-clean.ps1  disk-clean.sh  disk-health.ps1  disk-health.sh  disk-scan.ps1  disk-scan.sh  elevated-clean.ps1  memory-optimize.ps1  memory-optimize.sh  memory-status.ps1  memory-status.sh  startup-list.ps1  startup-list.sh  startup-toggle.ps1  startup-toggle.sh  system-info.ps1  system-info.sh
src-tauri/src/: lib.rs  lib_clean_backup.rs  main.rs  report_worker.rs
src-tauri/src/feishu/: auth.rs  bitable.rs  config.rs  mod.rs  types.rs
src/assets/: main.css
src/components/: FloatingBall.vue  LoginPage.vue  Menu.vue  MenuPanel.vue  OptimizerPanel.vue  QuickInputBox.vue  Submenu.vue
src/components/optimizer/: DiskClean.vue  DiskHealth.vue  MemoryStatus.vue  OptimizerPanel.vue  StartupManager.vue  StatusCard.vue  SystemInfo.vue
src/components/ui/alert-dialog/: AlertDialog.vue  AlertDialogAction.vue  AlertDialogCancel.vue  AlertDialogContent.vue  AlertDialogDescription.vue  AlertDialogFooter.vue  AlertDialogHeader.vue  AlertDialogTitle.vue  AlertDialogTrigger.vue
src/components/ui/badge/: Badge.vue
src/components/ui/collapsible/: CollapsibleContent.vue
src/components/ui/progress/: Progress.vue
src/components/ui/separator/: Separator.vue
src/components/ui/table/: Table.vue  TableBody.vue  TableCell.vue  TableHead.vue  TableHeader.vue  TableRow.vue
src/shared/: colorThemes.ts
src/stores/: auth.ts  optimizer.ts
