[package]
name = "aidi-desktop-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "aidi_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
walkdir = "2"
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Registry",
] }

[target.'cfg(target_os = "macos")'.dependencies]
